<resources>
    <string name="app_name">PiCar</string>

    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>

    <string name="move_forward">Move Forward</string>
    <string name="move_backward">Move Backward</string>
    <string name="turn_left">Turn Left</string>
    <string name="turn_right">Turn Right</string>

    <string name="camera">Camera</string>
    <string name="buzzer">Buzzer</string>

    <string name="rgb_red">RGB Red</string>
    <string name="rgb_green">RGB Green</string>
    <string name="rgb_blue">RGB Blue</string>

    <string name="connect_title">PI CAR</string>
    <string name="connect_ipaddr">IP Address</string>
    <string name="connect_port">Port</string>
    <string name="connect_connbtn">Connect</string>
    <string name="connect_gamepad_descr">Connect a gamepad</string>
    <string name="connect_radio_tcp">TCP</string>
    <string name="connect_radio_udp">UDP</string>
</resources>
