<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".ui.ControlFragment">

    <ImageButton
        android:id="@+id/btn_forward"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:background="@android:color/black"
        android:contentDescription="@string/move_forward"
        android:src="@drawable/ic_arrow_up_white_24dp"
        app:layout_constraintBottom_toTopOf="@id/btn_backward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_backward"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/black"
        android:contentDescription="@string/move_backward"
        android:src="@drawable/ic_arrow_down_white_24dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_rgb_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_forward" />

    <ImageButton
        android:id="@+id/btn_turn_left"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/black"
        android:contentDescription="@string/turn_left"
        android:src="@drawable/ic_arrow_left_white_24dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_rgb_blue"
        app:layout_constraintEnd_toStartOf="@id/btn_forward"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_turn_right"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/black"
        android:contentDescription="@string/turn_right"
        android:src="@drawable/ic_arrow_right_white_24dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_rgb_blue"
        app:layout_constraintStart_toEndOf="@id/btn_backward"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Red Button -->
    <ImageButton
        android:id="@+id/btn_rgb_red"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_red_dark"
        android:contentDescription="@string/rgb_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Green Button -->
    <ImageButton
        android:id="@+id/btn_rgb_green"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_green_dark"
        android:contentDescription="@string/rgb_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_rgb_red" />

    <!-- Blue Button -->
    <ImageButton
        android:id="@+id/btn_rgb_blue"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_blue_dark"
        android:contentDescription="@string/rgb_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_rgb_green" />

    <!-- Camera Button -->
    <ImageButton
        android:id="@+id/btn_camera"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button_outline"
        android:contentDescription="@string/camera"
        android:src="@drawable/ic_videocam_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_buzzer" />

    <!-- Buzzer Button -->
    <ImageButton
        android:id="@+id/btn_buzzer"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button_outline"
        android:contentDescription="@string/buzzer"
        android:src="@drawable/ic_volume_up_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>